<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gomi</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="label_phone_auth">Phone Authentication</string>
    <string name="label_manage_user">Manage User</string>

    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Déconnexion</string>
    <string name="loading">Loading…</string>
    <string name="signed_out">Signed Out</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_photo">Photo URL</string>

    <string name="logout">Se déconnecter</string>
    <string name="anonymous_signin">Anonymous Sign In</string>
    <string name="account_link">Account Linking</string>
    <string name="account_link_btn">Link Account</string>
    <string name="title_provider">User\'s provider</string>
    <string name="title_profile">User\'s profile</string>
    <string name="title_update_profile">Update user\'s profile</string>
    <string name="title_update_email">Update user\'s email</string>
    <string name="title_update_password">Update user\'s password</string>
    <string name="title_send_password_reset">Send password reset</string>
    <string name="title_delete_user">Delete a user</string>
    <string name="updated">%s updated.</string>
    <string name="verify">Verify</string>

    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>

    <string name="menu">Menu</string>
    <string name="photo_trash">Poubelle</string>
    <string name="img_scan">Scan</string>

    <string name="photo_homepage">Gomi</string>
    <string name="slogan">Gomi, le choix éco-responsable.</string>
    <string name="new_scan">Scanner votre produit en cliquant sur le bouton.</string>

    <string name="title_page_formation">Formation</string>
    <string name="photo_formation">meeting</string>
    <string name="text_formation">Sais-tu déjà ce que contient une poubelle ? <br></br> Comment faire pour trier tes déchets ? <br></br> Clique sur “ Commencer ! “ pour en savoir plus</string>
    <string name="begin">Commencer !</string>

    <string name="title_page_localisation">Formation</string>
    <string name="photo_localisation">meeting</string>
    <string name="legend_glass">Poubelle pour verres</string>
    <string name="legend_household">Poubelle à ordures ménagères</string>
    <string name="legend_recycle">Poubelle à emballage recyclables</string>

    <string name="title_page_list">Fiche produit</string>
    <string name="back">Retour</string>

    <string name="title_page_settings">Paramètres</string>
    <string name="photo_settings">paramètre</string>
    <string name="account">Compte</string>
    <string name="notification">Notifications</string>

    <string name="edit">éditer</string>
    <string name="quit">Sortir</string>
    <string name="add">ajouter</string>
    <string name="continued">Continuez</string>

    <string name="url_json">https://world.openfoodfacts.org/api/v0/product/3274080001005.json</string>

</resources>