<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListProductActivity">

    <LinearLayout
        android:id="@+id/contentMenu"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/menu_icon"
            android:contentDescription="@string/menu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/close"
            android:layout_gravity="start"
            android:padding="10dp" />
        <TextView
            android:id="@+id/titleSettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:paddingVertical="8dp"
            android:text="@string/title_page_list"
            android:textSize="18sp"
            android:fontFamily="@font/poppins" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contentHeader"
        android:orientation="horizontal"
        android:layout_below="@id/contentMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_below="@id/contentMenu"
            android:layout_width="66dp"
            android:layout_height="72dp"/>

        <LinearLayout
            android:id="@+id/contentTitleProduct"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/nameProduit"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorGrayDark"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/catProduit"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorGrayDark"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:contentDescription="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contentHeader"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins"
        android:text="@string/back"
        android:textColor="@color/colorWhite"
        android:background="@drawable/rounded_corners"
        android:paddingHorizontal="125dp"
        android:paddingVertical="15dp"
        tools:textSize="14sp"/>

</RelativeLayout>